remove java.security.manager=allow from tests