@@ -367,15 +367,6 @@
       </build>
     </profile>
     <profile>
-      <id>java17+</id>
-      <activation>
-        <jdk>[17,)</jdk>
-      </activation>
-      <properties>
-        <invoker.security.manager>-Djava.security.manager=allow</invoker.security.manager>
-      </properties>
-    </profile>
-    <profile>
       <id>run-its</id>
       <build>
         <plugins>
@@ -400,11 +391,6 @@
               <scriptVariables>
                 <projectVersion>${project.version}</projectVersion>
               </scriptVariables>
-              <!--
-                Necessary on JDK 17+ for ITs "mexec-gh-389-block-exit-*" to avoid "UnsupportedOperationException:
-                The Security Manager is deprecated and will be removed in a future release". See profile 'java17+'.
-              -->
-              <mavenOpts>${invoker.security.manager}</mavenOpts>
             </configuration>
             <executions>
               <execution>
